--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.20",
     "git": "^0.1.5",
+    "lucide-react": "^0.474.0",
     "next": "^15.2.0-canary.19",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
