--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   "dependencies": {
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.20",
+    "geist": "^1.3.1",
     "git": "^0.1.5",
     "lucide-react": "^0.474.0",
-    "next": "^15.2.0-canary.19",
+    "next": "^15.1.6",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
@@ -28,7 +29,7 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.1.5",
+    "eslint-config-next": "^15.1.5",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5"
