--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/font": "^14.2.15",
     "aos": "^2.3.4",
     "autoprefixer": "^10.4.20",
     "geist": "^1.3.1",
